It is widely believed that X448 is stronger than X25519 and thus --assert-pubkey-algo should tell this. When the option was first introduced, x448 (cv448 and ed448) was not yet used and thus not considered in the test. In general curve names are distinct but for these two algos this is not the case and the number should not be considered as a strength parameter.
Description
Description
Revisions and Commits
Revisions and Commits
Related Objects
Related Objects
Event Timeline
Comment Actions
For master fixed with rGbb6b38c24010258c7cb2da840d0a088fe43393b3 (Wrong bug id used).
Also fixed for gnupg24.