gpg: Fix comparing ed448 vs ed25519 with --assert-pubkey-algo.

* g10/keyid.c (extra_algo_strength_offset): New.
(compare_pubkey_string_part): Use the mapping.
--

GnuPG-bug-id: 7425